--- a/MentalHealthAp/appsettings.json
+++ b/MentalHealthAp/appsettings.json
@@ -7,19 +7,19 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MentalHealthApp": "Server=KEN-LWS-226;Database=MentalHealthApp; User Id=remote_user; Password=123456;Encrypt=False"
+    "name": "connection string"
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
     "ValidIssuer": "http://localhost:5000",
-    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+    "Secret": "JWT secret"
   },
   "MailSettings": {
-    "Server": "smtp.gmail.com",
-    "Port": "587",
-    "SenderName": "Mental Health App",
-    "SenderEmail": "kennedyjuma1997@gmail.com",
-    "UserName": "kennedyjuma1997@gmail.com",
-    "Password": "nnympgdxbjgznplr"
+    "Server": "your mail server",
+    "Port": "port",
+    "SenderName": "Mail sender",
+    "SenderEmail": "sender email",
+    "UserName": "username",
+    "Password": "password"
   }
 }
